@@ -55,6 +55,3 @@
 
  - clamd-stream-client support
 
- - passphrase for SSL keys
-	- backup/restore
-	- CHANGELOG
